RESOLVED FIXED310200
AX: WebKit computes an incorrect bounding box for math table row and cells
https://bugs.webkit.org/show_bug.cgi?id=310200
Summary AX: WebKit computes an incorrect bounding box for math table row and cells
Tyler Wilcock
Reported 2026-03-18 11:56:34 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2026-03-18 11:56:45 PDT
Tyler Wilcock
Comment 2 2026-03-18 11:59:09 PDT
EWS
Comment 3 2026-03-20 15:28:22 PDT
Committed 309640@main (03151c3c0826): <https://commits.webkit.org/309640@main> Reviewed commits have been landed. Closing PR #60875 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.