AX: WebKit computes an incorrect bounding box for math table row and cells https://bugs.webkit.org/show_bug.cgi?id=310200 rdar://172851295

Reviewed by Joshua Hoffman.

RenderTableRow and RenderTableSection never reported their bounds to
the accessibility geometry cache during the PaintPhase::Accessibility
paint phase. This meant the AXGeometryManager never cached rects for
these elements.

In the isolated tree, when no paint-cached rect exists, the fallback
path uses InitialLocalRect for size but overwrites the position with
the nearest painted ancestor's position. For table rows, that ancestor
is the <table> itself, so every row gets the table's top-left corner
as its position. This is observable with VoiceOver: the cursor appears
on the first row regardless of which row is focused.

The fix adds takeBounds calls for RenderTableSection (and its child
rows) and RenderTableRow during the accessibility paint phase, matching
what RenderBlock and RenderTable already do. RenderTableCell was not
affected because it inherits from RenderBlockFlow which already calls
takeBounds.

* LayoutTests/accessibility/table-row-bounding-boxes-expected.txt: Added.
* LayoutTests/accessibility/table-row-bounding-boxes.html: Added.
* Source/WebCore/rendering/RenderTableRow.cpp:
(WebCore::RenderTableRow::paint):
* Source/WebCore/rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::paintObject):

Canonical link: https://commits.webkit.org/309640@main